Preparacion de la interfaz para la carga ajax de amigos

--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1025,6 +1025,69 @@ font-family: 'Andika', sans-serif;
 
 
 
+
+#tab-amigos ul.list-friends {
+  position: relative;
+  margin: auto;
+  list-style-type: none;
+}
+#tab-amigos ul.list-friends li {
+  display: table;
+  background-color: #FAFAFA;
+  border-bottom-left-radius: 50px;
+  border-top-left-radius: 50px;
+  margin: 10px;
+  border-bottom-right-radius: 5px;
+  border-top-right-radius: 5px;
+  width: 95%;
+  color: #62C1BA;
+  border: 1px solid #bad0dd;
+  
+-webkit-box-shadow: 0px 0px 13px 1px rgba(183,182,224,1);
+-moz-box-shadow: 0px 0px 13px 1px rgba(183,182,224,1);
+box-shadow: 0px 0px 13px 1px rgba(183,182,224,1);
+  
+  
+}
+#tab-amigos ul.list-friends li img {
+  width: 72px;
+  height: 72px;
+  border-radius: 100%;
+  float: left;
+  border: 1px solid #bad0dd;
+  cursor: pointer;
+}
+#tab-amigos ul.list-friends li a {
+  text-decoration: none;
+  margin: auto;
+  vertical-align: middle;
+  display: table-cell;
+  cursor: pointer;
+  height: auto;
+  font-family: 'Open Sans', sans-serif;
+  letter-spacing: 1px;
+  word-spacing: 2px;
+}
+#tab-amigos ul.list-friends li a:hover, img:hover {
+  opacity: 0.5;
+  transition: all .2s ease-in;
+}
+#tab-amigos ul.list-friends li img:hover {
+  border: 1px solid #D2FF78;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
 ul.table > li {
   display: table-cell; }
 
