--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -43,7 +43,7 @@
 
   <div id="widget" onClick="cambiopagina()"> 
 <!--
-    <div id="middle"><img src="{{STATIC_URL}}img/5.jpg" width="300" height="300"><span class="entypo-user"></span></div>
+    <div id="middle"></div>
     <div id="linkedin" class="size left"><span class="entypo-users"></span></div>
 -->
     <div id="middle"><div class="entypo-user"></div></div>
