--- a/skyfolk/static/css/widget1.css
+++ b/skyfolk/static/css/widget1.css
@@ -66,7 +66,7 @@ body{
 	background:#ccc;
 	border:5px solid #eee;
 	-webkit-border-radius: 30px;
-border-radius: 100px;
+        border-radius: 100px;
 	box-shadow:inset 0px 20px 45px #999;
 	position:absolute;
 	left:0;
@@ -76,6 +76,7 @@ border-radius: 100px;
 	overflow:hidden;
 	font-size:9em;
 	text-shadow:0px 0px 15px #999;
+        background: url('http://skyfolk.herokuapp.com/static/img/bola/2.jpg')
 }
 
 #linkedin {
