Preparacion de la interfaz para la carga ajax de amigos(correcion)

--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -344,9 +344,9 @@
       <div id="div-separator">
         <div class="sidebar card" id="tab-container">
           <ul class="unstyled table fullwidth links">
-            <li class="tab"><a href="#tab-popular">Popular</a></li>
-            <li class="tab"><a href="#tab-comentarios">Comentarios</a></li>
-            <li class="tab"><a href="#tab-amigos">Amigos</a></li>
+            <li class="tab" id="li-tab-popular"><a href="#tab-popular">Popular</a></li>
+            <li class="tab" id="li-tab-comentarios"><a href="#tab-comentarios">Comentarios</a></li>
+            <li class="tab" id="li-tab-amigos"><a href="#tab-amigos">Amigos</a></li>
           </ul>
           <div class="unstyled content">
 				<div id="tab-popular">
