--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -4,6 +4,7 @@
 @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300);
 @import url(http://weloveiconfonts.com/api/?family=fontawesome);
+@import url(http://fonts.googleapis.com/css?family=Montserrat+Alternates);
 
 
 /* fontawesome */
@@ -1042,6 +1043,7 @@ font-family: 'Andika', sans-serif;
   width: 95%;
   color: #62C1BA;
   border: 1px solid #bad0dd;
+  font:1.2em 'Montserrat Alternates';
   
 -webkit-box-shadow: 0px 0px 13px 1px rgba(183,182,224,1);
 -moz-box-shadow: 0px 0px 13px 1px rgba(183,182,224,1);
@@ -1056,6 +1058,7 @@ box-shadow: 0px 0px 13px 1px rgba(183,182,224,1);
   float: left;
   border: 1px solid #bad0dd;
   cursor: pointer;
+
 }
 #tab-amigos ul.list-friends li a {
   text-decoration: none;
@@ -1067,6 +1070,10 @@ box-shadow: 0px 0px 13px 1px rgba(183,182,224,1);
   font-family: 'Open Sans', sans-serif;
   letter-spacing: 1px;
   word-spacing: 2px;
+  text-align: center;
+  margin-left:0px;
+  width:100%;
+
 }
 #tab-amigos ul.list-friends li a:hover, img:hover {
   opacity: 0.5;
