--- a/skyfolk/templates/account/base_login-signup.html
+++ b/skyfolk/templates/account/base_login-signup.html
@@ -5,6 +5,13 @@
 
 	     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
          <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/noti.css" />
+         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.css" />
+         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}media/bootstrap/css/bootstrap.min.css" />
+         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}media/bootstrap/css/bootstrap-theme.css" />
+         <script src="{{STATIC_URL}}media/bootstrap/js/bootstrap.js"></script>
+         <script src="{{STATIC_URL}}media/bootstrap/js/bootstrap.min.js"></script>
+         <script src="{{STATIC_URL}}media/bootstrap/js/npm.js"></script>
+         
          <script type="text/javascript" src="http://www.google.com/jsapi"></script>
          <script type="text/javascript">google.load('jquery', '1.7.1');</script>
          <script type="text/javascript" src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
