--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -78,7 +78,10 @@
      <dropdown>
  
   <ul class="animate">
-    <li class="animate">Mi perfil <i class="fontawesome-user"></i></li>
+    <li class="animate"> Mi perfil <i class="fontawesome-user"></i></li>
+    <li class="animate"> Configuracion <i href="/config/changepass" class="fontawesome-cog"></i></li>
+    <li class="animate"> Market <i href="#market" class="fontawesome-th"></i></li>
+    <li class="animeate"> Mis lazos <i href="#mislazos" class="fontawesome-link"></i></li>
     <li class="animate">Multimedia <i class="fontawesome-film"></i></li>
     <li class="animate">Juegos <i class="fontawesome-play"></i></li>
     <li class="animatex">+ Visto <i class="fontawesome-eye-open"></i></li>
