--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -167,6 +167,7 @@
 								<li><a id ="menucf-profile" class="logout" href="/config/profile"><i class="entypo-vcard"></i>Perfil.</a></li>
 	</ul>
 </nav>
+<div class="wrappercog">
 <section id="contra">
 <form id="levi">
 	{% block cf-title %}{% endblock %}
@@ -188,6 +189,7 @@ Verificar contraseña <input class="actual" type="password" name="Repita su nuev
 -->
 </form>
 </section>
+</div>
 </body>
 </header>
 
