--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -1,6 +1,6 @@
-{% extends 'account/base_interface.html' %}
+<!-- {% extends 'account/base_interface.html' %}
 
-{% block include_files %}
+{% block include_files %} -->
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
  	
@@ -102,6 +102,9 @@
 
 	.form li a:hover i {
 		color:#ea4f35;
+	}
+	#menucf-profile {
+		border-left:5px solid #AA8439;
 	}
 
 	.form i {
