--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -1,6 +1,6 @@
-<!-- {% extends 'account/base_interface.html' %}
+{% extends 'account/base_interface.html' %}
 
-{% block include_files %} -->
+{% block include_files %}
 <head>
  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
  	
@@ -103,9 +103,6 @@
 	.form li a:hover i {
 		color:#ea4f35;
 	}
-	#menucf-profile {
-		border-left:5px solid #AA8439;
-	}
 
 	.form i {
 		margin-right:15px;
@@ -170,7 +167,6 @@
 								<li><a id ="menucf-profile" class="logout" href="/config/profile"><i class="entypo-vcard"></i>Perfil.</a></li>
 	</ul>
 </nav>
-<div class="wrappercog">
 <section id="contra">
 <form id="levi">
 	{% block cf-title %}{% endblock %}
@@ -192,7 +188,6 @@ Verificar contraseña <input class="actual" type="password" name="Repita su nuev
 -->
 </form>
 </section>
-</div>
 </body>
 </header>
 
