--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -133,8 +133,8 @@ bottom: -2px;
 }
 #contra {
 /*top: -10px;*/
-width: 470px;
-height: auto;
+width: 770px;
+height: 800px;
 /*margin-left: 385px;*/
 /*margin-top: -380px;*/
 font-family: 'Gafata', sans-serif;
@@ -165,3 +165,14 @@ margin-top: 20px;
 
 
 
+@media (min-width: 1200px) {
+	#contra {
+		height: 780px;
+	}
+}
+
+@media (min-width: 768px) and (max-width: 979px) {
+	#contra {
+		height: 880px;
+	}
+}
