--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -38,12 +38,12 @@ div.wrappercog {
 	width: 800px;
 
 }
-#pass {
+/*#pass {
 right: 35%;
 top: 40%;
 position: absolute;
 width:270px;
-}
+}*/
 
 .actual {
 color: black;
