--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -175,8 +175,6 @@
 <h6 id="ch"> Cambia tu contraseña o recupera tu contraseña actual.</h6>
 -->
 </form>
-</section>
-<section id="pass">
 <form id="float">
 	{% block cf-form %}{% endblock %}
 <!--
@@ -186,12 +184,23 @@ Verificar contraseña <input class="actual" type="password" name="Repita su nuev
 <input id="btn" type="submit" value="Guardar cambios">
 <p id="lost"><a href="/"> ¿Olvidaste tu contraseña?</a> </p>
 -->
+
 </form>
 </section>
+<!-- <section id="pass"> -->
+<!-- <form id="float">
+	{% block cf-form %}{% endblock %} -->
+<!--
+Contraseña actual <input class="actual" type="password" name="Contraseña actual." value="actual"><br>
+Nueva contraseña <input class="actual" type="password" name="Nueva contraseña." value=""><br>
+Verificar contraseña <input class="actual" type="password" name="Repita su nueva contraseña." value=""><br>
+<input id="btn" type="submit" value="Guardar cambios">
+<p id="lost"><a href="/"> ¿Olvidaste tu contraseña?</a> </p>
+-->
+<!-- </form> -->
+<!-- </section> -->
 </body>
 </header>
-
-
 </html>
 {% endblock%}
 
