--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -5,9 +5,18 @@
 		#menucf-profile {
 			background:#efefef;
 		}
+		.wrapper2 {
+			background-color: #FAFAFA;
+			color: white;
+			font-size: 17px;
+			width: auto;
+			height: auto;
+			margin: auto;
+			display: inline-block;
+		}
 	</style>
 {% endblock%}
-
+<div class="wrapper2">
 {% block cf-title %}
 	<h4 id="cn"> Perfil </h4>
 	<h6 id="ch"> Cambia datos de tu perfil</h6>
@@ -25,3 +34,4 @@
 		<input id="btn" type="submit" value="Guardar cambios">
 	</form>
 {% endblock %}
+</div>
