--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -4,15 +4,12 @@
 	<style>
 		#menucf-profile {
 			background:#efefef;
+			height: auto;
 		}
-		.wrapper2 {
-			background-color: #FAFAFA;
-			color: white;
-			font-size: 17px;
-		}
+		
 	</style>
 {% endblock%}
-<div class="wrapper2">
+
 {% block cf-title %}
 	<h4 id="cn"> Perfil </h4>
 	<h6 id="ch"> Cambia datos de tu perfil</h6>
@@ -30,4 +27,3 @@
 		<input id="btn" type="submit" value="Guardar cambios">
 	</form>
 {% endblock %}
-</div>
