--- a/skyfolk/templates/account/cf-changepass.html
+++ b/skyfolk/templates/account/cf-changepass.html
@@ -4,7 +4,7 @@
 {% block additional_files %}
 	<style>
 		#menucf-changepass {
-			background:#efefef;
+			background:#fafafa;
 		}
 	</style>
 {% endblock%}
