--- a/skyfolk/templates/account/cf-profile.html
+++ b/skyfolk/templates/account/cf-profile.html
@@ -3,8 +3,7 @@
 {% block additional_files %}
 	<style>
 		#menucf-profile {
-			background:#efefef;
-			height: auto;
+			background:#fafafa;
 		}
 		
 	</style>
