--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -22,7 +22,7 @@ font-size: 35px;
 color: #5AC3FF;
 position: relative;
 float:left;
-margin-top: 15px;
+margin-top: 35px;
 margin: 28px;
 
 }
@@ -127,7 +127,7 @@ bottom: -2px;
 #contra {
 /*top: -10px;*/
 width: 470px;
-height: 1000px;
+height: auto;
 /*margin-left: 385px;*/
 /*margin-top: -380px;*/
 font-family: 'Gafata', sans-serif;
