--- a/skyfolk/static/css/conf.css
+++ b/skyfolk/static/css/conf.css
@@ -11,12 +11,13 @@
   border: 2px solid #BFFFF3;
   border-top: 5px solid #BFFFF3;
   width: 40%;
-  height: 95%;
+  height: 95% auto;
   left: 30%;
-  position: absolute;
-  display: none;
-  background-color: #fff;
+  position: relative;
+  display: block;
+  background-color: #fafafa;
   z-index: 9999;
+  margin: auto;
 }
 span.fontawesome-cog {
   left: 30%;
@@ -27,6 +28,7 @@ span.fontawesome-cog {
   font-family: 'Open Sans', sans-serif;
   color: #9FCCC3;
   transition: all 0.3s ease-in-out;
+  margin: auto;
 }
 img.profile {
   width: 140px;
@@ -45,7 +47,7 @@ img.profile:hover {
  -webkit-filter: blur(1px) sepia(0.5);
 }
 input[target="million"]  {
-  position: absolute;
+  position: relative;
   left: 40%;
   text-align: center;
   top: 45%;
@@ -56,7 +58,7 @@ input[target="million"]  {
     transition: all .3s ease-in-out;
 }
 input[target="shot"] {
-    position: absolute;
+    position: relative;
     left: 15%;
     width: 70%;
     text-align:center;
@@ -68,7 +70,7 @@ input[target="shot"] {
     transition: all .3s ease-in-out;
 }
 input[target="url"] {
-    position: absolute;
+    position: relative;
     left: 40%;
     text-align: center;
     top: 57%;
@@ -79,7 +81,7 @@ input[target="url"] {
     transition: all .3s ease-in-out;
 }
 input[target="location"] {
-    position: absolute;
+    position: relative;
     left: 40%;
     text-align: center;
     top: 64%;
@@ -92,13 +94,14 @@ input[target="location"] {
 
 
 .mi-nav {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
   text-align: center;
   font-size: 60px;
   top: 80%;
-    margin: -2%;
+  margin: -2%;
+  margin: auto;
 }
 
 .mi-nav-list li{
