--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -7,6 +7,7 @@
 <link rel="stylesheet" href="{{STATIC_URL}}css/miperfil.css"/>
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/widget1.css" />
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/buscar.css" />
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/comentarios.css" />
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/conf.css" />
 <link rel="stylesheet" href="{{STATIC_URL}}css/colorbox.css" />
