--- a/skyfolk/static/css/conf.css
+++ b/skyfolk/static/css/conf.css
@@ -13,7 +13,7 @@
   width: 40%;
   height: 95% auto;
   left: 30%;
-  position: relative;
+  position: absolute;
   display: none;
   background-color: #fafafa;
   z-index: 9999;
