--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -104,10 +104,12 @@
         <span class="fontawesome-cog">  Configuración rápida.</span>
         <img class="profile" src="http://data2.whicdn.com/images/18501113/large.jpg"></img>
         <span id="close" class="fontawesome-remove" title="Cerrar"></span>
+        <form>
       <input type="text" name="FirstName" target="million" value="{{ user_profile.username }}" placeholder="Username">
         <input type="text" name="secondname" target="shot" value="Play Hard" placeholder="state">
         <input type="url" name="paginaweb" target="url" value="skyfolk.com" placeholder="Página web">
         <input type="location" name="location" target="location" value="España (Murcia)" placeholder="Zona">
+      </form>
         <nav class="mi-nav">
         <ul class="mi-nav-list">
             <li class="fontawesome-comment" title="Ajustes del Chat"></li>
