--- a/skyfolk/static/css/conf.css
+++ b/skyfolk/static/css/conf.css
@@ -47,7 +47,7 @@ img.profile:hover {
  -webkit-filter: blur(1px) sepia(0.5);
 }
 input[target="million"]  {
-  position: relative;
+  position: static;
   left: 40%;
   text-align: center;
   top: 45%;
@@ -59,7 +59,7 @@ input[target="million"]  {
     transition: all .3s ease-in-out;
 }
 input[target="shot"] {
-    position: relative;
+    position: static;
     left: 15%;
     width: 70%;
     text-align:center;
@@ -73,7 +73,7 @@ input[target="shot"] {
     transition: all .3s ease-in-out;
 }
 input[target="url"] {
-    position: relative;
+    position: static;
     left: 40%;
     text-align: center;
     top: 57%;
@@ -86,7 +86,7 @@ input[target="url"] {
     transition: all .3s ease-in-out;
 }
 input[target="location"] {
-    position: relative;
+    position: static;
     left: 40%;
     text-align: center;
     top: 64%;
@@ -170,7 +170,7 @@ span.fontawesome-remove {
         color:tomato;
     }
 .mi-nav-list li:hover {
-    transform: scale(1.2);
+    transform: scale(1.1);
     border: 4px solid #9fccc3;
     cursor: pointer;
     color: #9fccc3;
