--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -40,7 +40,8 @@ width:270px;
 
 .actual {
 color: black;
-border-radius: 8px 8px 8px 8px;
+min-width: 120px;
+border-radius: 3px;
 text-shadow: rgb(150,150,150) 1px 1px 1px;
 margin-bottom: 25px;
 
@@ -48,10 +49,9 @@ display:block;
 margin-left:60px;
 margin-top:10px;
 }
-.actual:hover {
-opacity: 0.5;
+.actual:focus {
 border-color: blue;
-border: 4px solid #6AFA9D;
+border: 2px solid #6AFA9D;
 box-shadow: rgb(150,150,150) 1px 1px;
 }
 #float {
