--- a/skyfolk/static/css/configuracion.css
+++ b/skyfolk/static/css/configuracion.css
@@ -88,7 +88,8 @@ width: 170px;
 height: 50px;
 font-family: 'Open Sans', sans-serif;
 font-size: 15px;
-
+color: white;
+background-color: #303F73;
 
 display:block;
 margin:0 auto 0 auto;
@@ -104,24 +105,12 @@ text-decoration:none !important;
 	padding:10px 20px;
 	
 	background-repeat:no-repeat;
+	transition: all .3s ease-in;
 
 }
 #btn:hover {
-	background-color:#63c7fe;
+	background-color:#265B6A;
 	
-	background-image:	url('button_bg.png'), url('http://cssdeck.com/uploads/media/items/6/6Wl44TI.png'),
-						-moz-radial-gradient(	center bottom, circle,
-												rgba(109,217,250,1) 0,rgba(109,217,250,0) 100px),
-						-moz-linear-gradient(#63c7fe, #58bef7);
-						
-	background-image:	url('button_bg.png'), url('http://cssdeck.com/uploads/media/items/6/6Wl44TI.png'),
-						-webkit-gradient(	radial, 50% 100%, 0, 50% 100%, 100,
-											from(rgba(109,217,250,1)), to(rgba(109,217,250,0))),
-						-webkit-gradient(linear, 0% 0%, 0% 100%, from(#63c7fe), to(#58bef7));
-						background-position:top left;
-	background-position:top left, bottom right, 0 0, 0 0;
-
-
 }
 #btn:active {
 bottom: -2px;
