--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -40,6 +40,8 @@
 		overflow:hidden;
 		right: 500px;
 		top: 90px;
+		float: left;
+		left: 15%;
 		
 		-webkit-border-radius: 5px;
 		-moz-border-radius: 5px;
