--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -38,10 +38,9 @@
 		padding:0;
 		list-style: none;
 		overflow:hidden;
-		right: 500px;
 		top: 90px;
 		float: left;
-		left: 15%;
+		margin-left: 30px;
 		
 		-webkit-border-radius: 5px;
 		-moz-border-radius: 5px;
