--- a/skyfolk/templates/account/base_cf.html
+++ b/skyfolk/templates/account/base_cf.html
@@ -39,8 +39,7 @@
 		list-style: none;
 		overflow:hidden;
 		top: 90px;
-		float: left;
-		margin-left: 30px;
+		right: 720px;
 		
 		-webkit-border-radius: 5px;
 		-moz-border-radius: 5px;
