--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -100,24 +100,30 @@
     
 </div>
 <!-- Configuración rápida -->
-<div id="fastconf">
+      <div id="confr">
         <span class="fontawesome-cog">  Configuración rápida.</span>
-        <img class="profile" src="http://data2.whicdn.com/images/18501113/large.jpg"></img>
-        <span id="close" class="fontawesome-remove" title="Cerrar"></span>
-        <form>
-      <input type="text" name="FirstName" target="million" value="{{ user_profile.username }}" placeholder="Username">
-        <input type="text" name="secondname" target="shot" value="Play Hard" placeholder="state">
-        <input type="url" name="paginaweb" target="url" value="skyfolk.com" placeholder="Página web">
-        <input type="location" name="location" target="location" value="España (Murcia)" placeholder="Zona">
+        <span class="fontawesome-remove"></span>
+        <img src="http://data2.whicdn.com/images/18501113/large.jpg" class="img-rounded"></img>
+    <form role="form">
+  <div class="form-group">
+    <label for="exampleInputEmail1"><p>Nombre de usuario</p></label>
+    <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter new name.">
+  </div>
+  <div class="form-group">
+    <label for="exampleInputPassword1"><p>Estado</p></label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Play Hard">
+  </div>
+       <div class="form-group">
+    <label for="exampleInputPassword1"><p>Localizacion</p></label>
+    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Murcia (España)">
+  </div>
+       <div class="form-group">
+    <label for="exampleInputPassword1"><p>Web</p></label>
+    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="skyfolk.com">
+  </div>
+  
+      <button type="button" class="btn btn-primary">Save Changes</button>
       </form>
-        <nav class="mi-nav">
-        <ul class="mi-nav-list">
-            <li class="fontawesome-comment" title="Ajustes del Chat"></li>
-            <li class="fontawesome-lock" title="Privacidad"></li>
-            <li class="fontawesome-calendar" title="Mi agenda"></li>
-            <li class="fontawesome-bell-alt" title="Notificaciones"></li>
-            <li class="fontawesome-edit" title="Diseño"></li>
-            </ul></nav>
       </div>
 <!-- Fin de conf rápida -->
 <!-- Notificacion me gusta -->
