--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -4,6 +4,8 @@
 <meta charset="UTF-8">
 <meta name="description" content="Mi perfil">
 <meta name="keywords" content="Mi perfil, Mensajes, Amigos, Seguidores, Comentarios">
+    	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css">
+	<link href="http://netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.min.css" rel="stylesheet" />
 <link rel="stylesheet" href="{{STATIC_URL}}css/miperfil.css"/>
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/widget1.css" />
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/buscar.css" />
