--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -100,7 +100,7 @@
     
 </div>
 <!-- Configuración rápida -->
-      <div id="confr">
+      <!--<div id="confr">
         <span class="fontawesome-cog">  Configuración rápida.</span>
         <span class="fontawesome-remove"></span>
         <img src="http://data2.whicdn.com/images/18501113/large.jpg" class="img-rounded"></img>
@@ -124,7 +124,7 @@
   
       <button type="button" class="btn btn-primary">Save Changes</button>
       </form>
-      </div>
+      </div> -->
 <!-- Fin de conf rápida -->
 <!-- Notificacion me gusta -->
 <div id="notifi">
