--- a/skyfolk/static/css/conf.css
+++ b/skyfolk/static/css/conf.css
@@ -1,10 +1,10 @@
-@import url(http://weloveiconfonts.com/api/?family=fontawesome);
+/*import url(http://weloveiconfonts.com/api/?family=fontawesome);
 @import url(http://fonts.googleapis.com/css?family=Open+Sans:300);
 /* fontawesome */
 [class*="fontawesome-"]:before {
   font-family: 'FontAwesome', sans-serif;
 }
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
+/*@import url(http://fonts.googleapis.com/css?family=Open+Sans);
 body {
   padding: 0;
   margin: auto;
