--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -100,7 +100,7 @@
     
 </div>
 <!-- Configuración rápida -->
-      <!--<div id="confr">
+      <div id="confr" class="col-xs-6 col-md-4">
         <span class="fontawesome-cog">  Configuración rápida.</span>
         <span class="fontawesome-remove"></span>
         <img src="http://data2.whicdn.com/images/18501113/large.jpg" class="img-rounded"></img>
@@ -121,10 +121,20 @@
     <label for="exampleInputPassword1"><p>Web</p></label>
     <input type="password" class="form-control" id="exampleInputPassword1" placeholder="skyfolk.com">
   </div>
-  
+
       <button type="button" class="btn btn-primary">Save Changes</button>
       </form>
-      </div> -->
+      <div class="nav">  <nav>
+    <ul>
+      <li title="Recursos" class="fontawesome-cloud"></li>
+      <li title="Mis Trabajos" class="fontawesome-wrench"></li>
+      <a href="index.html"><li title="Inicio" class="fontawesome-dashboard"></li></a>
+      <li title="Aportaciones" class="fontawesome-copy"></li>
+      <a href="novedades.html"><li title="Páginas de interés" class="fontawesome-globe"></li></a>
+    </ul>
+      </nav>
+      </div>
+      </div>
 <!-- Fin de conf rápida -->
 <!-- Notificacion me gusta -->
 <div id="notifi">
