--- a/skyfolk/static/css/fastcog/fastcog.css
+++ b/skyfolk/static/css/fastcog/fastcog.css
@@ -7,6 +7,7 @@
   position: absolute;
   background-color: #FAFAFA;
   font-family: 'Open Sans', sans-serif;
+  display: none;
 }
 span.fontawesome-cog {
   left: 26%;
