--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -100,6 +100,7 @@
     
 </div>
 <!-- Configuración rápida -->
+<!--
       <div id="confr" class="col-xs-6 col-md-4">
         <span class="fontawesome-cog">  Configuración rápida.</span>
         <span class="fontawesome-remove"></span>
@@ -134,7 +135,7 @@
     </ul>
       </nav>
       </div>
-      </div>
+      </div>-->
 <!-- Fin de conf rápida -->
 <!-- Notificacion me gusta -->
 <div id="notifi">
