--- a/skyfolk/templates/account/base_interface.html
+++ b/skyfolk/templates/account/base_interface.html
@@ -7,9 +7,7 @@
 <link rel="stylesheet" href="{{STATIC_URL}}css/miperfil.css"/>
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/widget1.css" />
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/buscar.css" />
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/comentarios.css" />
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/fastcog/bootstrap.css" />
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/fastcog/fastcog.css" />
+<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/comentarios.css" />>
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/conf.css" />
 <link rel="stylesheet" href="{{STATIC_URL}}css/colorbox.css" />
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/jquery.gritter.css" />
