--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1116,8 +1116,7 @@ margin: 0px;
 width: 100%;
 position: fixed;
 display: block;
-box-shadow: 3px 2px 4px 3px rgb(26, 188, 156);
-background: rgb(26, 188, 156);
+background: #3E9397;
 opacity: 0.8;
 top: 3px;
 z-index: 9999;
@@ -1204,9 +1203,10 @@ z-index: 9999;
 .nameact {
     list-style: none;
     padding: 5px;
-    margin: 40px;
+    margin: 38px;
     width: 225px;
-    z-index: 9999; 
+    z-index: 9999;
+    margin-top: -7px;
 }
 #panel1 {
   position: absolute;
