--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -13,13 +13,13 @@
 	left: 7%;
 	flex-direction: row;
 	box-shadow:
-   1px 1px 0 rgb(22, 160, 133),
-   2px 2px 0 rgb(22, 160, 133),
-   3px 3px 0 rgb(22, 160, 133),
-   4px 4px 0 rgb(22, 160, 133),
-   5px 5px 0 rgb(22, 160, 133),
-   6px 6px 0 rgb(22, 160, 133),
-   7px 7px 0 rgb(22, 160, 133)
+   1px 1px 0 #3E9397,
+   2px 2px 0 #3E9397,
+   3px 3px 0 #3E9397,
+   4px 4px 0 #3E9397,
+   5px 5px 0 #3E9397,
+   6px 6px 0 #3E9397,
+   7px 7px 0 #3E9397
   ;
 }
 .field:after {
@@ -35,7 +35,7 @@
 .field>form input[type=text] {
   flex:1;
   padding:0.6em;
-  border:0.2em solid rgb(26, 188, 156);
+  border:0.2em solid #3E9397;
   width:822px;
   height:34px;
   margin-top:2px;
