--- a/skyfolk/static/css/buscar.css
+++ b/skyfolk/static/css/buscar.css
@@ -7,6 +7,7 @@
 	display: flex;
 	position: absolute;
 	margin: 5em auto;
+  margin-top: -11px;
 	width: 901px;/*70%*/
 	height: 38px;
 	top: -50px;
