--- a/skyfolk/static/css/miperfil.css
+++ b/skyfolk/static/css/miperfil.css
@@ -1926,11 +1926,15 @@ cursor: pointer;
 @media only screen and (min-width: 641px) and (max-width: 959px) {
   #page-wrapper {
     width: 640;
-    margin-top: -100px;
+    top: -100px;
       } 
   }
 @media only screen and (max-width: 640px) {
     #page-wrapper {
-    width: 631px;
-    margin-top: -110px; }  
+    width: 640px;
+    top: -110px; }  
+  }
+@media only screen and (min-width: 640px) and (max-width: 1390px) {
+    #page-wrapper {
+    top: -80px; }  
   }
