--- a/skyfolk/templates/account/profile.html
+++ b/skyfolk/templates/account/profile.html
@@ -370,7 +370,7 @@
             <li class="tab" id="li-tab-comentarios"><a href="#tab-comentarios">Comentarios</a></li>
             <li class="tab" id="li-tab-amigos"><a href="#tab-amigos">Amigos</a></li>
           </ul>
-          <div class="unstyled content">
+          <div class="unstyled content" id="hood-tabs">
 				<div id="tab-popular">
 	
 	
